--- a/head.html
+++ b/head.html
@@ -2,4 +2,11 @@
 <script src="/scripts/lib-franklin.js" type="module" crossorigin="use-credentials"></script>
 <script src="/scripts/scripts.js" type="module" crossorigin="use-credentials"></script>
 <link rel="stylesheet" href="/styles/styles.css"/>
+
+<link rel="stylesheet" href="node_modules/@spectrum-css/vars/dist/spectrum-global.css">
+<link rel="stylesheet" href="node_modules/@spectrum-css/vars/dist/spectrum-medium.css">
+<link rel="stylesheet" href="node_modules/@spectrum-css/vars/dist/spectrum-light.css">
+<link rel="stylesheet" href="node_modules/@spectrum-css/page/dist/index-vars.css">
+<link rel="stylesheet" href="node_modules/@spectrum-css/button/dist/index-vars.css">
+
 <link rel="icon" href="data:,">
